# deepsvg

./: .dockerignore  .gitignore  Dockerfile  README.md  preprocess_and_or_train.sh  pyproject.toml  requirements.txt
configs/unsymbols/: env_ours_hier_ord.py  ours_hier_ord.py
dataset/: preprocess.py
deepsvg/model/: model.py
deepsvg/svglib/: svg.py
deepsvg/utils/: train_utils.py
k8s/: cm-unsymbols-deepsvg.yaml  deepsvg.yaml
notebooks/: uns_fonts.ipynb
notebooks/unsymbols/: uns_oniconds.ipynb
