[project]
name = "deepsvg"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "cairosvg",
    "ipython",
    "jupyter",
    "matplotlib",
    "networkx",
    "numba",
    "numpy",
    "pandas",
    "pillow",
    "scikit-image",
    "scikit-learn",
    "shapely",
    "six>=1.12.0",
    "svglib",
    "svgwrite",
    "tensorflow",
    "torch",
    "torchvision",
    "tqdm",
    # "umap-learn[plot]",
]
