[project]
name = "deepsvg"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "cairosvg>=2.7.1",
    "ipython>=8.12.3",
    "jupyter>=1.1.1",
    "kivy>=2.3.1",
    # "matplotlib>=3.7.5", # bug in release, no moviepy.editor
    "moviepy==1.0.3",
    "moviepy>=1.0.3",
    "networkx>=3.1",
    "numba>=0.53.1",
    # "numpy>=1.24.4",  # numpy both 1 and 2 not possible, we force to <2 
    # "numpy>=1.24.4<2",
    "numpy>=1.24.4,<2",
    "pandas>=2.0.3",
    "pillow>=10.4.0",
    "scikit-image>=0.21.0",
    "scikit-learn>=1.3.2",
    "shapely>=2.0.7",
    "six>=1.12.0",
    "svglib>=1.5.1",
    "svgwrite>=1.4.3",
    "tensorboardx>=2.6",
    "tensorflow>=2.11.1",
    "torch==1.12.1",
    "torchvision>=0.13.1",
    "tqdm>=4.67.1",
    "umap-learn[plot]>=0.5.7",
]
# packages = [
#     "deepsvg",
# ]

[tool.pdm.build]
includes = [
    "deepsvg",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


